--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "consolidate": "^0.14.5",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "mongodb": "^2.2.25",
     "nunjucks": "^3.0.0",
     "unique-random-array": "^1.0.0"
   }
